--- a/boards/shields/MKB/MKB_R.conf
+++ b/boards/shields/MKB/MKB_R.conf
@@ -17,6 +17,13 @@ CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
+CONFIG_NICE_OLED_WIDGET_WPM=n
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_LUNA=n
+
 # PMW3610 optical sensor settings
 CONFIG_PMW3610=y
 CONFIG_PMW3610_SWAP_XY=n
