--- a/boards/shields/MKB/MKB_L_Base.dtsi
+++ b/boards/shields/MKB/MKB_L_Base.dtsi
@@ -1,6 +1,7 @@
 #include <input/processors.dtsi>
 #include <dt-bindings/zmk/input_transform.h>
 #include <zephyr/dt-bindings/input/input-event-codes.h>
+#include <dt-bindings/zmk/keys.h>
 #include "MKB_pinctrl_L.dtsi"
 #include "MKB.dtsi"
 
@@ -32,6 +33,19 @@
 / {
     chosen {
         zephyr,display = &oled;
+    };
+
+    zip_keybind_keys: zip_keybind_keys {
+        compatible = "zmk,input-processor-keybind";
+        #input-processor-cells = <0>;
+        track_remainders;
+        bindings = <&kp RIGHT>,
+                   <&kp LEFT>,
+                   <&kp UP>,
+                   <&kp DOWN>;
+        tick = <40>;
+        wait-ms = <0>;
+        tap-ms = <10>;
     };
 
     split_inputs {
