--- a/config/west.yml
+++ b/config/west.yml
@@ -42,8 +42,7 @@ manifest:
       remote: kot149
       revision: v1
     - name: zmk-input-processor-keybind
-      # remote: zettaface
-      remote: te9no
+      remote: zettaface
       revision: main
     # - name: zmk-leader-key
     #   remote: urob
