--- a/boards/shields/MKB/MKB_R_JOY.conf
+++ b/boards/shields/MKB/MKB_R_JOY.conf
@@ -12,6 +12,9 @@ CONFIG_I2C_NRFX=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_SENSOR=y
 
+# Input processor configuration
+CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND=y
+
 # Debug logging settings
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
