--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -45,10 +45,8 @@ CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=y
 CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
 
-# Enable HMC5883L driver
-CONFIG_INPUT_HMC5883L=y
-CONFIG_INPUT_HMC5883L_DEBUG_BAR_GRAPH=y
-CONFIG_INPUT_HMC5883L_POLLING_INTERVAL_MS=40
+# Enable TLX493D driver
+CONFIG_INPUT_TLX493D=y
 
 # Battery reporting configuration
 CONFIG_ZMK_BATTERY_REPORTING=y
