--- a/config/west.yml
+++ b/config/west.yml
@@ -35,7 +35,7 @@ manifest:
     - name: zmk-nice-oled
       remote: mctechnology17
       revision: main
-    - name: zmk-driver-hmc5883l
+    - name: zmk-driver-tlx493d
       remote: te9no
       revision: main
     - name: zmk-layout-shift
