--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -48,6 +48,9 @@ CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
 # Enable TLX493D driver
 CONFIG_INPUT_TLX493D=y
 
+# Enable input processor keybind
+CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND=y
+
 # Battery reporting configuration
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
