--- a/boards/shields/MKB/MKB_L_Base.dtsi
+++ b/boards/shields/MKB/MKB_L_Base.dtsi
@@ -52,7 +52,7 @@
 
         arrow {
             layers = <2>;
-            input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT|INPUT_TRANSFORM_Y_INVERT)>, <&zip_keybind_keys>;
+            input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT|INPUT_TRANSFORM_Y_INVERT)>;
             process-next;
         };
         
