--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,11 @@ include:
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_RZT
 
+  - board: seeeduino_xiao_ble
+    shield: MKB_L_LVR rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    artifact-name: MKB_L_MODULE_LVR
+
 
   - board: seeeduino_xiao_ble
     shield: MKB_R_TB rgbled_adapter nice_oled
