--- a/boards/shields/MKB/MKB_R_TB.conf
+++ b/boards/shields/MKB/MKB_R_TB.conf
@@ -1,8 +1,6 @@
 # Basic hardware configurations
+CONFIG_PINCTRL=y
 CONFIG_SPI=y
-
-# Input processor configuration
-CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND=y
 
 # PMW3610 optical sensor settings
 CONFIG_PMW3610=y
@@ -11,3 +9,6 @@ CONFIG_PMW3610_INVERT_X=n
 CONFIG_PMW3610_INVERT_Y=y
 CONFIG_PMW3610_SMART_ALGORITHM=y
 CONFIG_PMW3610_REPORT_INTERVAL_MIN=14
+
+# Input processor configuration
+CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND=y
