--- a/boards/shields/MKB/MKB_L_TPD.conf
+++ b/boards/shields/MKB/MKB_L_TPD.conf
@@ -45,8 +45,9 @@ CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=y
 CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
 
-# Enable LIS3MDL driver
-CONFIG_INPUT_LIS3MDL=y
+# Enable PINNACLE driver
+CONFIG_INPUT_PINNACLE=y
+CONFIG_ZMK_INPUT_PINNACLE_IDLE_SLEEPER=y
 
 # Battery reporting configuration
 CONFIG_ZMK_BATTERY_REPORTING=y
