--- a/config/west.yml
+++ b/config/west.yml
@@ -12,8 +12,8 @@ manifest:
       url-base: https://github.com/kot149
     - name: mctechnology17
       url-base: https://github.com/mctechnology17
-    - name: ShiniNet
-      url-base: https://github.com/ShiniNet/
+    - name: petejohanson
+      url-base: https://github.com/petejohanson
   projects:
     - name: zmk
       #remote: zmkfirmware
@@ -48,7 +48,7 @@ manifest:
     #   remote: urob
     #   revision: v0.2.1 # set to same as ZMK version above
     - name: cirque-input-module
-      remote: ShiniNet
+      remote: petejohanson
       revision: main
   self:
     path: config
