--- a/boards/shields/MKB/MKB_R_TB.conf
+++ b/boards/shields/MKB/MKB_R_TB.conf
@@ -1,13 +1,17 @@
 # Enable USB and Bluetooth connectivity
 CONFIG_ZMK_USB=y
 CONFIG_ZMK_BLE=y
+CONFIG_ZMK_MOUSE=y
 CONFIG_ZMK_POINTING=y
 
 # Basic hardware configurations
 CONFIG_INPUT=y
 CONFIG_PINCTRL=y
 CONFIG_SPI=y
+CONFIG_I2C=y
+CONFIG_I2C_NRFX=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
+CONFIG_SENSOR=y
 
 # Debug logging settings
 CONFIG_ZMK_USB_LOGGING=y
@@ -19,9 +23,6 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
-# Input processor configuration
-CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND=y
-
 # PMW3610 optical sensor settings
 CONFIG_PMW3610=y
 CONFIG_PMW3610_SWAP_XY=n
@@ -29,6 +30,9 @@ CONFIG_PMW3610_INVERT_X=n
 CONFIG_PMW3610_INVERT_Y=y
 CONFIG_PMW3610_SMART_ALGORITHM=y
 CONFIG_PMW3610_REPORT_INTERVAL_MIN=14
+
+# Input processor configuration
+CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND=y
 
 # RGB LED widget configuration
 CONFIG_RGBLED_WIDGET=y
@@ -45,7 +49,6 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Bluetooth connection interval settings (in units of 1.25ms)
-CONFIG_BT_BAS=y
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
