--- a/boards/shields/MKB/MKB_R_Base.dtsi
+++ b/boards/shields/MKB/MKB_R_Base.dtsi
@@ -15,6 +15,17 @@
     };
 
     kscan0: kscan0 {
+        compatible = "zmk,kscan-composite";
+        matrix {
+            kscan = <&kscan1>;
+        };
+        direct {
+            row-offset = <6>;
+            kscan = <&kscan2>;
+        };
+    };
+
+    kscan1: kscan1 {
         compatible = "zmk,kscan-gpio-charlieplex";
         interrupt-gpios = <&xiao_d 6 (GPIO_ACTIVE_HIGH)>;
         gpios
@@ -25,6 +36,9 @@
             , <&gpio0   9 (GPIO_ACTIVE_HIGH)>
             , <&gpio0  10 (GPIO_ACTIVE_HIGH)>
             ;
+    };
+    
+    kscan2: kscan2 {
     };
 };
 
