--- a/build.yaml
+++ b/build.yaml
@@ -52,15 +52,15 @@ include:
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_R_MODULE_ENC
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_RZT rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_R_MODULE_RZT
-
 #  - board: seeeduino_xiao_ble
-#    shield: MKB_R_Base MKB_R_KEY rgbled_adapter nice_oled
+#    shield: MKB_R_Base MKB_R_RZT rgbled_adapter nice_oled
 #    snippet: zmk-usb-logging studio-rpc-usb-uart
-#    artifact-name: MKB_R_MODULE_KEY
+#    artifact-name: MKB_R_MODULE_RZT
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_R_Base MKB_R_KEY rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    artifact-name: MKB_R_MODULE_KEY
 
 
 
